--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -4,6 +4,21 @@
     <title>Welcome To Penguin</title>
   </head>
   <body>
-    <h1 th:text="${message}"></h1>
+    <h1>User list</h1>
+    <table>
+      <thead>
+      <tr>
+        <th>Name</th>
+        <th>Email</th>
+      </tr>
+      </thead>
+      <tbody>
+      <!-- Iterate through the list -->
+      <tr th:each="user : ${users}">
+        <td th:text="${user.displayName}"></td>
+        <td th:text="${user.email}"></td>
+      </tr>
+      </tbody>
+    </table>
   </body>
 </html>
